# waqfProtocol

./: .env.example  ADMIN_REPORTS_PRODUCTION_GRADE.md  BRAND_COLORS_APPLIED.md  CRYPTO_INITIALIZATION.md  CRYPTO_POLYFILL_IMPLEMENTATION.md  CRYPTO_QUICK_REFERENCE.md  DASHBOARD_REDESIGN.md  DEPLOY_SATELLITE.md  IMPROVEMENTS_SUMMARY.md  JUNO_TROUBLESHOOTING.md  LINT_FIXES_COMPLETE.md  PAYMENT_FLOW_UPDATE.md  PAYMENT_INTEGRATION.md  PAYMENT_INTEGRATION_GUIDE.md  PAYMENT_PROVIDERS_COMPLETE.md  PAYMENT_PROVIDERS_PRODUCTION_GUIDE.md  PAYMENT_SYSTEM_READY.md  PORTFOLIO_INTEGRATION.md  PRODUCTION_IMPROVEMENTS.md  QUICK_REFERENCE.md  TRANCHE_STATUS.md  TROUBLESHOOTING.md  UI_ENHANCEMENTS_SUMMARY.md  WAQF_MODEL_UPDATE.md  WARP.md  debug-tranches.html  eslint.config.mjs  fix-hybrid-allocations.md  juno.config.mjs  next.config.mjs  package-lock.json  package.json  seed-consumable-waqfs-browser.js  test-crypto-polyfill.js
docs/: BACKEND_VALIDATION_FIX.md  CAUSE_MARKETPLACE_IMPROVEMENTS.md  COMPLETION_SUMMARY.md  DASHBOARD_INTEGRATION_COMPLETE.md  EXPIRATION_PREFERENCE_RELOCATION.md  FIXING_EMPTY_CAUSES_ISSUE.md  IMPACT_EVENTS_QUICK_START.md  INITIAL_TRANCHE_CREATION.md  INNOVATION_IMPLEMENTATION_GUIDE.md  LOCK_PERIOD_USER_CONTROL.md  WAQF_TYPES.md  (+29 more)
src/satellite/: Cargo.toml
src/satellite/src/: activity_log_hooks.rs  admin_hooks.rs  admin_hooks_old.rs  admin_request_hooks.rs  allocation_hooks.rs  category_hooks.rs  cause_hooks.rs  donation_hooks.rs  impact_event_hooks.rs  impact_event_types.rs  lib.rs  tranche_hooks.rs  waqf_hooks.rs  waqf_types  waqf_types.rs  waqf_utils.rs
(+188 files in other folders)
