[package]
name = "satellite"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.19"
ic-cdk = "0.18.5"
ic-cdk-macros = "0.18.5"
serde = "1.0.225"
serde_cbor = "0.11.2"
junobuild-satellite = {version = "0.2.6", default-features = false, features = ["on_set_doc", "assert_set_doc", "assert_delete_doc"]}
junobuild-macros = "0.1.1"
junobuild-utils = "0.1.3"

